--- a/src/_includes/layouts/index.njk
+++ b/src/_includes/layouts/index.njk
@@ -1,8 +1,5 @@
 {% extends "layouts/base.njk" %}
 
 {% block content %}
-    <article>
-        <h1>{{ title }}</h1>
-        {{ content | safe }}
-    </article>
+   {% include  "partials/hero.html"%}
 {% endblock %}
