--- a/src/scss/components/_actionbar.scss
+++ b/src/scss/components/_actionbar.scss
@@ -1,8 +1,10 @@
 .griff-actionbar {
+    display: flex;
     flex:1;
     flex-basis: 5rem;
     flex-grow: 0;
     flex-shrink: 0;
     background: var(--Secondary);
     color: var(--Text50);
+    justify-content: center;
 }
