--- a/src/scss/utilities/_layout.scss
+++ b/src/scss/utilities/_layout.scss
@@ -1,23 +1,27 @@
 .wrapper {
-    display: flex;
-    height: 100%;
-    width: 100%;
+  display: flex;
+  height: 100%;
+  width: 100%;
 }
 
 main {
-    flex: 10;
+  flex: 10;
+  display: flex;
+  flex-direction: column;
+  margin: 0rem 5rem;
+  .main-content {
+    flex: 1;
     display: flex;
-    .main-content {
-        margin:5rem 17rem 0 12rem;
-        /* probably want grid */
-        flex: 1;
-    }
+  }
 }
 
 /* todo figure out re-using */
 @media screen and (max-width: 37em) {
-    .page-layout {
-        flex-direction: column-reverse;
-    }
+  .page-layout {
+    flex-direction: column-reverse;
+  }
 
+  main {
+    margin: 0rem 2rem;
+  }
 }
