--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -32,7 +32,7 @@
         {% endif %}
     </head>
     <body>
-        <input type="checkbox" id="theme" name="theme" class="visually-hidden">
+        <input aria-label="Switch theme colors" type="checkbox" id="theme" name="theme" class="visually-hidden">
         <div class="wrapper page-layout transition">
             {% include "partials/actionbar.html" %}
             <main id="main-content">
