--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,5 +1,9 @@
 @import "../colors";
 
+.hero-wrap {
+    background-color: var(--Background);
+    width: 100%;
+}
 .hero {
     --HeroBorders: #{$dark-secondary};
     --HeroBackground: var(--Background50);
@@ -11,22 +15,23 @@
     --HeroTriangle: var(--Highlight);
     
     display: flex;
-    width: 80%;
-    height:  30vh;
+    max-width:100vh;
+    height: auto;
     position: relative;
     align-items: center;
-    margin-top: 1vw;
-   
+    margin-bottom: 2rem;
     svg {
         min-width: 65%;
         height: 120%;
     }
 
     h1 {
+        transition: opacity .2s ease-in-out;
+        opacity: 1;
         width: auto;
         display: inline-block;
         flex:1;
-        font-size: 4vw;
+        font-size: min(4vw, 8vh);
         line-height: 5.5vw;
         height: 100%;
        &:after {
@@ -53,10 +58,10 @@
  /* todo figure out re-using */
  @media screen and (max-width: 45em) {
     .hero {
-      height: 10vh;
       flex-wrap: wrap;
       justify-content: center;
       margin-top:0;
+      width: 100%;
       svg {
           order: 1;
           width: 100%;
@@ -65,10 +70,11 @@
       }
 
       h1 {
+          margin-top: 1rem;
           &:after {
               margin-top: 1rem;
-              width: 110%;
-              margin-left: -5%;
+              width: 125%;
+              margin-left: -10%;
           }
       }
   
