--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -1,12 +1,18 @@
 .logo {
-    display: flex;
-    height: 5rem;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    align-items:flex-end;
-
+    height: 3rem;
     svg {
-        height: 55%;
+        height: 100%;
+        width: auto;
+    }
+}
+
+.micro-hero {
+    display: inline-flex;
+    max-height: 100%;
+    max-width: 45px;
+    margin-left: 0.5rem;
+    svg {
+        height: 100%;
+        width: 100%;
     }
 }
