--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -3,23 +3,32 @@ $height: 1.5rem;
 $btn-width: 1.2rem;
 $btn-height: 1.2rem;
 $btn-margin: 0.3rem;
+
+.theme-toggle {
+    display: flex;
+}
+
 .toggle-container {
+    border: 0.12rem solid transparent;
     display: inline-block;
     width: $width;
     height: $height;
     position: relative;
     cursor: pointer;
-    margin: 0.5rem;
     border-radius: $height;
     background-color: var(--Primary);
 }
 
+
+
 .toggle-button {
     &:active  {
+        display: none;
         &:before {
             box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
         }
     }
+    
     position: absolute;
     display: flex;
     align-items: center;
@@ -69,19 +78,29 @@ $btn-margin: 0.3rem;
         }   
     }
 }
-/* transition for theme  */
-.transition,
-.transition *,
-.transition *:before,
-.transition *:after {
-    transition: background-color 750ms, fill 750ms;
-    transition-delay: 0ms;
+#theme:focus + .wrapper {
+    .toggle-container {
+        border: 2px solid var(--Text);
+    }
+    .toggle-button {
+        &:before {
+            box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+        }
+    }
 }
+/* Make on js!!! transition for theme  */
+// .transition,
+// .transition *,
+// .transition *:before,
+// .transition *:after {
+//     transition: all 750ms;
+//     transition-delay: 0ms;
+// }
 
 #theme:checked + .wrapper {
     .toggle-button {
         &::before{
-         transform: translateX(($width - $btn-width - ($btn-margin * 2)));
+         transform: translateX(($width - $btn-width - ($btn-margin * 2)) - (0.12rem  * 2));
         }   
     }
 }
