--- a/src/scss/utilities/_layout.scss
+++ b/src/scss/utilities/_layout.scss
@@ -1,17 +1,36 @@
 .wrapper {
   display: flex;
+  overflow: hidden;
   height: 100%;
   width: 100%;
 }
 
 main {
-  flex: 10;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   margin: 0rem 5rem;
   .main-content {
+    height: 100%;
+  }
+}
+
+.site-header {
+  padding:1rem 0;
+  background: var(--Background);
+  z-index: 1;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 1rem;
+  position: sticky;
+  top:0;
+  h1 {
     flex: 1;
-    display: flex;
+    display: inline-flex;
+    align-items: center;
   }
 }
 
@@ -24,4 +43,10 @@ main {
   main {
     margin: 0rem 2rem;
   }
+}
+
+.sticky-subtitle {
+  position: sticky;
+  top:0;
+  background: var(--Background);
 }
