--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -44,5 +44,5 @@ html, body {
 @import "./components/actionbar";
 @import "./components/hero";
 @import "./components/toggle";
-
+@import "./components/custom-element-fallbacks";
 @import "./components/collapse";
