--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,5 +1,5 @@
-<header class="site-header">
+<header slot="before" class="site-header">
     <div class="theme-toggle">{% include "./toggle.html" %}</div>
-    <h1 class="sticky-hidden sticky-title">{{ title }} <div class="micro-hero">{% include "img/computer.svg" %}</div></h1>
+    <h1 class="sticky-title">{{ title }} <div class="micro-hero">{% include "img/computer.svg" %}</div></h1>
     <div class="logo">{% include "img/logo.svg"%}</div>
 </header>
