--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -3,6 +3,7 @@
 .hero-wrap {
     background-color: var(--Background);
     width: 100%;
+    padding: 0 5rem;
 }
 .hero {
     --HeroBorders: #{$dark-secondary};
