--- a/src/scss/components/_headings.scss
+++ b/src/scss/components/_headings.scss
@@ -1,15 +1,21 @@
+@import "../variables";
+
+
 h3 {
-  display: inline-block;
-  overflow: hidden;
   min-width: 11rem;
+  position: relative;
+  margin-bottom: 2rem;
+  z-index: 10;
   &:after {
+    width: 100%;
     content: "";
+    position: absolute;
     display: block;
-    width:11rem;
     height: 0.2rem;
+    clip-path: polygon(0 0,135px 0, 135px 100%, 0 100%);
     margin-top: 0.2rem;
-    margin-bottom: 2rem;
     background: var(--Primary);
-    transition: width 0.4s ease-in-out !important;
+    transition: clip-path 0.1s ease-in-out;
+    
   }
 }
