blog post cards

--- a/src/_includes/layouts/index.njk
+++ b/src/_includes/layouts/index.njk
@@ -6,5 +6,5 @@
    <div slot="observable" class="collapse">
       {% include  "partials/hero.html"%}
    </div>
-   {% include  "partials/tiles.html"%}
+   {% include  "partials/posts.html"%}
 {% endblock %}
