--- a/src/scss/components/_posts.scss
+++ b/src/scss/components/_posts.scss
@@ -1,22 +1,20 @@
+$card-padding: 1.5rem;
 .post-tiles {
     display: flex;
     flex-direction: column;
     padding: 0 5rem;
     .tiles {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(var(--tiles-min-size, 16rem), 1fr));
+        max-width: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
         grid-gap: 1rem;
-
-        li {
-            padding: 5rem 1rem;
-            background: var(--Secondary);
-          }
     }
 
 }
 
 /* todo figure out re-using */
-@media screen and (max-width: 37em) {
+@media screen and (max-width: 45em) {
     .post-tiles {
       padding: 0 2rem;
     }
