--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -1,7 +1,24 @@
 
 .post-card {
+  border-radius: 3px;
     .post-title-link {
         display: inline-flex;
+        flex: 2;
+        min-height: 10rem;
+       h2 {
+        position: relative;
+        padding-bottom:0.5rem;
+        width: 100%;
+        &:before {
+          content: "";
+          position: absolute;
+          bottom:0;
+          left:0;
+          height: 0.2rem;
+          width: 100%;
+          background: var(--Primary);
+        }
+       }
     }
     --post-card-height: auto;
     --post-card-width: 25rem;
@@ -9,13 +26,10 @@
     background: var(--Secondary);
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     .post-img-link {
-      display: flex;
-      flex-shrink: 0;
-      flex-grow: 0;
-      flex-basis: 50%;
       .post-img {
-        height: 10rem;
+        height: 11rem;
         width: 100%;
         background-position: center;
         background-size: cover;
@@ -33,25 +47,18 @@
       font-weight: 600;
       font-size: 0.875rem;
       position: relative;
-      padding: 0 0.5rem;
       margin-bottom: 0.5rem;
-      &:before {
-        content: "";
-        position: absolute;
-        top:0;
-        left:0;
-        height: 100%;
-        width: 0.1rem;
-        background: var(--Primary);
-      }
+      margin-right: 1rem;
     }
 
     .post-date {
+      font-weight: 600;
       display: flex;
       flex-direction: column;
       align-items: flex-end;
       font-size: 0.875rem;
       margin-top: 1rem;
+      position: relative;
     }
 
     .post-content {
