nav and animation

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -33,7 +33,7 @@
     </head>
     <body>
         <input aria-label="Switch theme colors" type="checkbox" id="theme" name="theme" class="visually-hidden">
-        <div class="wrapper page-layout transition">
+        <div class="wrapper page-layout">
             {% include "partials/actionbar.html" %}
             <main id="main-content">
                 <intersect-detect class="main-content">
