--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,7 +1,7 @@
 {% extends "layouts/base.njk" %}
 
 {% block content %}
-    <article>
+    <article class="content">
         <h1>Post - {{ title }}</h1>
         {{ content | safe }}
     </article>
