--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,4 +1,4 @@
 <header slot="before" class="site-header">
     <div class="theme-toggle">{% include "./toggle.html" %}</div>
-    <div class="logo">{% include "img/logo.svg"%}</div>
+    <a href="/" class="logo">{% include "img/logo.svg"%}</a>
 </header>
