--- a/src/_includes/partials/posts.html
+++ b/src/_includes/partials/posts.html
@@ -1,6 +1,6 @@
 {% set postslist = collections.posts | reverse | head(-20) %}
 
-<article class="post-tiles">
+<article class="content post-tiles">
     <div class="sticky-title">
       <h3>Recent Activity</h3>
       <h2 class="scroll-header"><span>{{title}}</span></h2>
