--- a/src/_includes/partials/toggle.html
+++ b/src/_includes/partials/toggle.html
@@ -1,8 +1,8 @@
 <label for="theme" class="toggle-container">
     <div class="toggle-button">
         <div class="toggle-icons">
-            {% include "img/moon.svg"%}
-            {% include "img/bulb.svg"%}
+            {% include "img/ghost.svg"%}
+            {% include "img/sun.svg"%}
         </div>
     </div>
 </label>
