--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -1,8 +1,10 @@
 .logo {
-    height: 2rem;
+    height: 80%;
+    margin-left: 1rem;
     svg {
         height: 100%;
         width: auto;
+        max-width: 100%;
     }
 }
 
