--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -38,7 +38,6 @@ $btn-margin: 0.3rem;
     right: 0;
     bottom: 0;
     margin-left: $btn-margin;
-    transition: .4s;
 
     .toggle-icons {
         display: flex;
@@ -66,7 +65,7 @@ $btn-margin: 0.3rem;
         width: $btn-width;
         border-radius: 100%;
         background-color: var(--White);
-        transition: transform .3s !important;
+        transition: transform .3s ease-in-out;
         box-shadow: 2px 1px 3px rgba(0,0,0,0.3);
     }
 }
@@ -77,7 +76,19 @@ $btn-margin: 0.3rem;
          transform: translateX(($width - $btn-width - ($btn-margin * 2)));
         }   
     }
+    .light {
+        opacity: 0;
+        transition: opacity 250ms linear;
+    }
 }
+
+#theme:not(:checked) + .wrapper {
+    .dark {
+        opacity: 0;
+        transition: opacity 250ms linear;
+    }
+}
+
 #theme:focus + .wrapper {
     .toggle-container {
         border: 2px solid var(--Text);
@@ -88,14 +99,26 @@ $btn-margin: 0.3rem;
         }
     }
 }
-/* Make on js!!! transition for theme  */
-// .transition,
-// .transition *,
-// .transition *:before,
-// .transition *:after {
-//     transition: all 750ms;
-//     transition-delay: 0ms;
-// }
+html.transition,
+html.transition *,
+html.transition *:before,
+html.transition *:after {
+    transition: all 300ms !important;
+    transition-delay: 0ms !important;
+}
+
+/* Remove all animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+    *, html.transition,
+    html.transition *,
+    html.transition *:before,
+    html.transition *:after {
+      animation-duration: 0.01s !important;
+      animation-iteration-count: 1 !important;
+      transition-duration: 0.01s !important;
+      scroll-behavior: auto !important;
+    }
+  }
 
 #theme:checked + .wrapper {
     .toggle-button {
