nav done first pass

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -42,6 +42,7 @@
                 </intersect-detect>
             </main>
         </div>
+        <div class="filler"></div>
         <!-- TODO  split  js into pages -->
         <script src="{{ assets.getPath("index.js")}}" type="module"></script>
     </body>
