--- a/src/_includes/partials/actionbar.html
+++ b/src/_includes/partials/actionbar.html
@@ -6,7 +6,8 @@
             <span>{{ entry.title }}</span>
         </a></li>
         {%- endfor %}
-        <li><a href="#" class="action">{% include "img/github.svg"%}<span>Github</span></a></li>
-        <li><a href="#" class="action">{% include "img/twitter.svg"%}<span>Twitter</span></a></li>
+        {%- for link in external.links %}
+            <li><a rel="noopener" target="_blank" href="{{link.url | url}}" class="action external">{% include link.icon %}<span>{{link.text}}</span></a></li>
+        {%- endfor %}
     </ul>
 </nav>
