--- a/src/scss/components/_collapse.scss
+++ b/src/scss/components/_collapse.scss
@@ -14,6 +14,7 @@
 
   background: var(--Background);
   .scroll-header {
+    pointer-events: none;;
     z-index: 0;
     display: inline-flex;
     position: absolute;
@@ -48,8 +49,8 @@
     transform: translateY(0);
     margin-top: 4px;
     z-index: 1;
+    padding-bottom: 2rem;
     .scroll-header {
-        opacity: 1;
         z-index: -1;
        span {
         transform: translateY(0);
