--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -1,8 +1,7 @@
 .logo {
-    height: 80%;
     margin-left: 1rem;
     svg {
-        height: 100%;
+        height: 3rem;
         width: auto;
         max-width: 100%;
     }
