--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -70,3 +70,5 @@ a {
 @import "./components/toggle";
 @import "./components/custom-element-fallbacks";
 @import "./components/collapse";
+/* todo move  to post.scss*/
+@import "./components/post";
