--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,8 +1,15 @@
 {% extends "layouts/base.njk" %}
 
 {% block content %}
-    <article class="content">
-        <h1>Post - {{ title }}</h1>
-        {{ content | safe }}
-    </article>
+<div slot="observable">
+    {% include "partials/post-hero.html" %}
+</div>
+<article class="post content">
+    <div class="post-title">
+        <h1>{{ title }}</h1>
+    </div>
+    <section>
+      {{ content | safe }}
+    </section>
+</article>
 {% endblock %}
