--- a/src/scss/components/_headings.scss
+++ b/src/scss/components/_headings.scss
@@ -1,10 +1,20 @@
 @import "../variables";
 
+h1 {
+  width: auto;
+  display: inline-block;
+  flex:1;
+  font-size: min(4vw, 7vh);
+  line-height: 4.5vw;
+  height: 100%;
+}
 
-h3 {
+h2 {
   min-width: 11rem;
   position: relative;
   margin-bottom: 2rem;
+  display: block;
+  padding-left:0.1rem;
   z-index: 10;
   &:after {
     width: 100%;
@@ -12,10 +22,26 @@ h3 {
     position: absolute;
     display: block;
     height: 0.2rem;
-    clip-path: polygon(0 0,135px 0, 135px 100%, 0 100%);
+    clip-path: polygon(0 0,50vw 0, 50vw 100%, 0 100%);
     margin-top: 0.2rem;
     background: var(--Primary);
     transition: clip-path 0.2s ease-in-out;
     
   }
 }
+
+@media screen and (max-width: 45em) {
+  h1 {
+    font-size: min(6vw, 8vh);
+    line-height: 6.5vw;
+  }
+
+  h2 {
+    font-size: 1.4rem;
+  }
+
+  h3 {
+    font-size: 1.1rem;
+  }
+}
+
