--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -1,15 +1,16 @@
 
+@import "../colors";
+
 .post-card {
   border-radius: 3px;
     .post-title-link {
         display: inline-flex;
         flex: 2;
         min-height: 7rem;
-       h2 {
+       h3 {
         position: relative;
         padding-bottom:1rem;
         width: 100%;
-        font-size: 1.3rem;
         &:before {
           content: "";
           position: absolute;
@@ -29,13 +30,35 @@
     flex-direction: column;
     overflow: hidden;
     .post-img-link {
+      .overlay {
+        z-index: 1;
+        background: linear-gradient(90deg, $dark-bg 0%, $dark-secondary 100%);
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        position: absolute;
+        opacity: 0.2;
+      }
       .post-img {
         height: 11rem;
         width: 100%;
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-color: var(--Primary);
+        position: relative;
+
+        img {
+          -o-object-fit: cover;
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          position: absolute;
+          background: var(--Primary50);
+        }
       }
     }
 
@@ -85,9 +108,5 @@
       display: flex;
       flex-direction: column;
       flex: 1;
-
-      .post-title  {
-        margin-bottom: 1rem;
-      }
     }
 }
